# P-Linked

./: .gitignore  README.md  nodeconfig.py
Docs/: ABSTRACT.md  BUILD.md  COMMISSION.md  INSTALL.md  README.md
ESP32-PLC/: CP2102N-A02-GQFN28.bak  CP2102N-A02-GQFN28.kicad_sym  ESP32-PLC.csv  ESP32-PLC.kicad_prl  ESP32-PLC.kicad_pro  ESP32-PLC.kicad_sch  ESP32-PLC.xml  ESP32-S3-WROOM-1-N16R2.kicad_sym  Proj_library.bak  Proj_library.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
ESP32-PLC/Proj-Symbols.pretty/: CONV_TPSM84205EAB.kicad_mod  ESP32-S3-WROOM-1.kicad_mod  QFN50P500X500X80-29N.kicad_mod  SK68XXMINI-HS.kicad_mod  XCVR_ESP32-S3-WROOM-1-N16R2.kicad_mod
ESP32-PLC/Proj-Symbols/3D Models/: TPSM84205EAB.step
ESP32_S3_ETH/: #auto_saved_files#  .gitignore  ESP32_S3_ETH.kicad_pcb  ESP32_S3_ETH.kicad_pro  ESP32_S3_ETH.kicad_sch  README.md  fp-lib-table  sym-lib-table  ~ESP32_S3_ETH.kicad_pcb.lck  ~ESP32_S3_ETH.kicad_sch.lck
ESP32_S3_ETH/Kicad_Libs/1N5819HW-7-F/: 1N5819HW-7-F.kicad_sym  SOD3715X145N.kicad_mod
ESP32_S3_ETH/Kicad_Libs/BK0603LL121-T/: BEADC0603X33N.kicad_mod  BK0603LL121-T.kicad_sym  BK0603LL121-T.step
ESP32_S3_ETH/Kicad_Libs/CP2102N-A02-GQFN28/: CP2102N-A02-GQFN28.kicad_sym  QFN50P500X500X80-29N.kicad_mod
ESP32_S3_ETH/Kicad_Libs/Conn_WIZnet_J1B1211CCD/: eec.dcm  eec.kicad_sym  eec.lib
ESP32_S3_ETH/Kicad_Libs/ECS-2033-250-BN-TR3/: part_info.txt  (+3 more)
hub/: CMakeLists.txt  sdkconfig  sdkconfig.old
hub/main/: CMakeLists.txt  main.c
nodes/light/: CMakeLists.txt  sdkconfig  sdkconfig.old
nodes/thermostat/: CMakeLists.txt  sdkconfig
(+173 files in other folders)
